open file dialog mock

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,6 +12,8 @@
                 "-o",
                 "${fileDirname}\\${fileBasenameNoExtension}.exe",
                 "-lgdi32",
+                "-lole32",
+                "-luuid"
                 //"-D_DEBUG"
             ],
             "options": {
