--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,7 +13,8 @@
                 "${fileDirname}\\${fileBasenameNoExtension}.exe",
                 "-lgdi32",
                 "-lole32",
-                "-luuid"
+                "-lavrt",
+                "-l:libksguid.a"
                 //"-D_DEBUG"
             ],
             "options": {
