platform independent graphics

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,7 +8,7 @@
                 "-fdiagnostics-color=always",
                 //"--verbose",
                 "-g",
-                "${file}",
+                "win_main.cpp",
                 "-o",
                 "${fileDirname}\\${fileBasenameNoExtension}.exe",
                 "-lgdi32",
